src/test/pass/class_prop_var.ly
class AA(integer a) {
	var @a = a
}
