src/test/fail/function_arg_redeclaration.ly
<@lily function f(integer a, integer a) {} @>
